add google cloud translation api service

--- a/hello.html
+++ b/hello.html
@@ -1,6 +1,7 @@
 <html>
     <body>
-        <button id="clickme">Get the subs</button>
+        <button id="getSubsBtn" class="button" data-btn-name="getSubtitles">Get the subs</button>
+        <button id="initPlayerBtn" class="button" data-btn-name="openPlayer">Open player</button>
         <script type="text/javascript" src="popup.js"></script>
     </body>
   </html>
