use a page action instead of browser action

--- a/popups/site.html
+++ b/popups/site.html
@@ -1,15 +1,6 @@
 <html>
     <body>
-        <div class="container player" style="display:none;">
-            <div class="controls">
-                <button id="getSubsBtn" class="button" data-btn-name="saveSubtitles">Copy subs</button>
-            </div>
-            <div class="info" style="display: none;">
-                <h3>Subtiles saved</h3>
-                <a href="" id="openSheetsLink">Open google sheets</a>
-            </div>
-        </div>
-        <div class="container site" style="display:none;">
+        <div class="container site">
                 <div class="controls">
                     <button id="initPlayerBtn" class="button" data-btn-name="openPlayer">Open player</button>
                 </div>
@@ -35,7 +26,7 @@
             }
 
             html {
-                
+
             }
         </style>
     </body>
