--- a/background.html
+++ b/background.html
@@ -5,7 +5,8 @@
 
   <title>Realtime translations for online videos</title>
 
-  <script src="https://www.gstatic.com/firebasejs/4.13.0/firebase.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/4.13.0/firebase.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/4.13.0/firebase-firestore.js"></script>
   <script src="background.js"></script>
 </head>
 <body>
